# SCA-HPCAsia-2026

./: README.md
prefect-slurm/: README.md  pyproject.toml
prefect-slurm/prefect_slurm/: __init__.py  core.py  executor.py  pyfunc.py  utils.py
prefect-slurm/prefect_slurm/templates/: batch.slurm.j2  local.sh.j2  run_py.j2
prefect-slurm/scripts/: get_counts.cpp  get_counts_integration.py  get_task_runner.py  sampler_workflow_qrmi.py
slurm/: slurm.conf
slurm/0_getting_started/: README.md  sampler_qrmi.py
slurm/1_multiple_jobs/: README.md  get_counts_job.sh  run.sh  run_sampler.sh  sampler.py  slurm-33.out
slurm/2_cpp/: CMakeLists.txt  README.md  output.json  sampler_test.cpp  slurm-43.out
slurm/2_job_split/: README.md  execute.sh  map_optimize.py  map_optimize.sh  result.py  result.sh  run_all.sh  run_hetjob.sh  run_sampler.sh
slurm/3_cpp/: sampler_test.cpp
slurm/getting_started/: README.md  run_sampler.sh  sampler.py
slurm/mpi/: sampler_test.cpp  sampler_test.sh
slurm/multiple_jobs/: README.md  get_counts.cpp  output.json  run.sh  run_sampler.sh
